# lab-gpu-commander

./: .gitignore  AGENTS.md  README.md  demo_usage.sh  example_workflow.sh  pyproject.toml  quick_start.md  run_and_monitor.sh  run_batch.sh  run_examples.py  run_examples_simple.sh  run_examples_with_labgpu.sh  tasks.json  使用指南.md  快速参考.txt  示例脚本说明.md  脚本总览.txt
docs/: batch-usage.md  user-manual.md
docs/plans/: 2026-02-01-python-sdk-design.md  2026-02-07-multi-node-design.md
examples/: gpu_alloc.py  gpu_burst.py  gpu_matmul.py  gpu_oom.py  gpu_sleep.py  gpu_spin.py  gpu_transfer.py
lab_gpu/: __init__.py  agent_api.py  cli.py  http_models.py  master.py  models.py  policy.py  scheduler.py  sdk.py  server_api.py  tui.py
lab_gpu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent_api.py  test_cli_api.py  test_http_models.py  test_master_api.py  test_scheduler.py  test_sdk.py  test_sdk_http.py
vscode/: .vscodeignore  README.md  extension.ts  lab-gpu-0.0.1.vsix  package-lock.json  package.json  tsconfig.json
