[project]
name = "lab-gpu"
version = "0.1.0"
description = "Lab GPU scheduler CLI"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "pynvml>=11.5.0",
  "psutil>=5.9.0",
  "textual>=0.58.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.110.0"]
test = ["pytest>=7.4.0"]

[project.scripts]
lab-gpu = "lab_gpu.cli:app"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lab_gpu"]

[tool.pytest.ini_options]
addopts = "-q"
